--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+* {
+  background-color: #000c24;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: "AeonikTRAIL";
+  src: url("/assets/fonts/AEONIK-REGULAR.TTF");
+  font-weight: 400;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: "AeonikTRAIL";
+  src: url("/assets/fonts/AEONIK-LIGHT.TTF");
+  font-weight: 500;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@font-face {
+  font-family: "AeonikTRAIL";
+  src: url("/assets/fonts/AEONIK-BOLD.TTF");
+  font-weight: 700;
+}
+
+.ff-aeo {
+  font-family: "Aeonik", sans-serif;
+}
+
+.scrollbar::-webkit-scrollbar {
+  display: none;
 }
